fix scrollbar all proyect

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -18,6 +18,15 @@
   box-sizing: border-box;
 }
 
+html, body {
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none; /* IE and Edge */
+  
+  &::-webkit-scrollbar {
+    display: none; /* Chrome, Safari, Opera */
+  }
+}
+
 body {
   font-family: var(--font-primary);
   line-height: 1.6;
@@ -28,6 +37,7 @@ body {
   background-repeat: no-repeat;
   background-attachment: fixed;
   min-height: 100vh;
+  overflow-x: hidden;
   
   &::before {
     content: '';
